fix(list-view): align list view to top (#2344)
* fix(list-view): align list view to top

* fix(iterations): fix chevron in iteration list entry

--- a/src/app/components/iterations-panel/iterations-panel.component.less
+++ b/src/app/components/iterations-panel/iterations-panel.component.less
@@ -83,6 +83,11 @@
             .pfng-tree-list-content {
               width: 85%;
             }
+            .list-pf-chevron {
+              .toggle-children {
+                padding-top: 5px;
+              }
+            }
             .list-pf-content {
               align-items: flex-start;
               justify-content: space-between;
