--- a/src/app/components/planner-list/planner-list.component.less
+++ b/src/app/components/planner-list/planner-list.component.less
@@ -44,8 +44,6 @@
      // height: ~"calc(e('100% - 120px'))";
       // to avoid overflown scroll height should be there
       overflow-y: scroll;
-      border-top: 1px solid;
-      border-top-color: @color-pf-black-300;
       >.list-group {
         border-top-width: 0 !important;
       }
@@ -75,7 +73,8 @@
     .list-pf-item {
 
       .list-pf-container {
-        padding: 0 15px !important;
+        align-items: flex-start !important;
+        padding: 15px !important;
       }
     }
     .tree-children {
@@ -83,6 +82,7 @@
     }
     .toggle-children {
       width: 10px;
+      font-size: 16px;
     }
     .toggle-children-wrapper-expanded .toggle-children::before {
       content: "\F107";
@@ -109,6 +109,14 @@
     border-color: transparent;
     padding-left: 0;
   }
+  .list-pf:not(.list-pf-stacked) .list-pf-content-flex,
+  .list-view-pf-main-info {
+    align-items: flex-start !important;
+  }
+  .list-view-pf-left {
+    line-height: 1.3;
+  }
+
   //Patternfly-ng's tree styles - End
 
   //tree-list, drag and drop css
